            col_util: add -w for control of color grid and (new) color bars
              -I can exclude map indexes from color grid
              -r cube as new default container in HSV/HSL mode
              -R to optionally show primary and secondary reference colors
              -U adds simple sorting of colors along with already unique sort
            planar:
              -V verbose lists all winding numbers found in a model
              -n map entries is now calculated
            wythoff: new operators and new and changed operator sequences
              (see 'wythoff -c list'), extend colour by associated element
            conway: new format for conway operators with 2 numbers e.g L_n:r
              new operators added, B,E,G,W
              operators L and l may now take subscripts
              operator u, e and o may now take two subscripts
              status reporting method update
              -p plarization options removed, now done internally
            off_color_radial:
              -m rainbow map entries calculated like rng
            canonical:
              -p face centroids and centroids magnitude planarization removed
              -p u make unit edge removed
              -p p fast planarize added
            build: compile with C++14
         Fixes
            usage helps reviewed and organized
            minor bug fixes and improvements
            major code review with fixes for potential issues

Version 0.27
01-10-20 Adrian Rossiter <adrian@antiprism.com>
         Changes
            off_color: new -e jJ to colour by edge length
            zono: -P add spirallohedra, new -T translation product
            conway: g and s take a numeric parameter
         Fixes
            off2vrml: avoid duplicate PROTO statements
            minor bug fixes and improvements

Version 0.26
05-04-19 Adrian Rossiter <adrian@antiprism.com>
         New Programs
            rotegrity: make rotegrity and nexorade models